1.9.90 (2.0.0 rc1):
-Add: Option to not modify the audio stream of mp3 files when calculating Replay Gain
-Add: libav plugin
-Fix: Modify mp3 stream when forcing the recalculation of Replay Gain
-Fix: Don't try to calculate Replay Gain if it is impossible
-Fix: Down/upmixing with sox
-Fix: Sox effects wouldn't work

1.9.80 (2.0.0 beta1):
-Add: Parallel Replay Gain calculation in the Replay Gain tool
-Add: Move tracks to new Album via context menu in the Replay Gain tool
-Add: sox plugin with support for some new file formats (8svx, aiff, amr wb)
-Add: Convert sample rate and sample size, downmix and apply effects (normalize, bass and treble) using sox
-Add: Copy embedded covers for ogg files using METADATA_BLOCK_PICTURE
-Add: Option to switch between COMMENT and DESCRIPTION as preferred comment field for ogg vorbis and flac files
-Add: Option to select preferred total tracks/discs number fields for ogg vorbis and flac files
-Add: Copy the tags total tracks/discs number, MusicBrainz Track Id and MusicBrainz Release Id
-Add: Compression level option for the lame plugin
-Add: Opus support (via opus-tools)
-Change: Remember dimensions of the sub-windows and dialogs
-Change: Sampling rate and number of channels can as of now only be changed through a filter plugin (currently only sox)
-Change: Immediately start converting a file after adding it to the file list if the conversion is running in queue mode
-Change: Quit soundKonverter when canceling the CD ripper dialog if soundKonverter was started with the --rip option
-Change: Quit the Replay Gain tool when it gets closed
-Change: Rename the m4a format to m4a/aac and alac to m4a/alac
-Fix: Handle internal Replay Gain calculation properly
-Fix: Don't accept dropping tracks onto albums with different codec or sampling rate in the Replay Gain tool
-Fix: Better file type recognition
-Fix: Output options control via command line parameters when ripping audio cds
-Fix: User defined parameters for mpcenc when using a preset
