@@ -5,6 +5,7 @@
 -Fix: Don't try to calculate Replay Gain if it is impossible
 -Fix: Down/upmixing with sox
 -Fix: Sox effects wouldn't work
+-Fix: Recognice mp3 and amr nb encoding support in ffmpeg/libav plugins
 
 1.9.80 (2.0.0 beta1):
 -Add: Parallel Replay Gain calculation in the Replay Gain tool
